[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Materials/theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/MainMenu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://Objects/UI/button.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -23.0
margin_right = 27.0
margin_bottom = 23.0
custom_constants/separation = 2

[node name="Play" type="Button" parent="Buttons"]
margin_right = 54.0
margin_bottom = 14.0
text = "PLAY"
script = ExtResource( 3 )

[node name="Options" type="Button" parent="Buttons"]
margin_top = 16.0
margin_right = 54.0
margin_bottom = 30.0
text = "OPTIONS"
script = ExtResource( 3 )

[node name="Exit" type="Button" parent="Buttons"]
margin_top = 32.0
margin_right = 54.0
margin_bottom = 46.0
text = "EXIT"
script = ExtResource( 3 )

[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_Exit_pressed"]
